objects/LAT_ContractWorflow__c.object
<CustomObject>
    <fields>
        <fullName>FY__c</fullName>
        <label>FY</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>LAT_Fiscal_Year</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>RegionalClientOnPremise__c</fullName>
        <label>Regional Client On Premise</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>REG CO</fullName>
                </value>
                <value>
                    <fullName>REG NE</fullName>
                </value>
                <value>
                    <fullName>REG NO</fullName>
                </value>
                <value>
                    <fullName>REG SE</fullName>
                </value>
                <value>
                    <fullName>REG SPC</fullName>
                </value>
                <value>
                    <fullName>REG SPI</fullName>
                </value>
                <value>
                    <fullName>REG SUL</fullName>
                </value>
                <value>
                    <fullName>REG DRINKS AND CO</fullName>
                </value>
                <value>
                    <fullName>REG PRESTIGE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WF__c</fullName>
        <label>Tipo WF</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WorkflowNumber__c</fullName>
        <label>Nr Atividade</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Atividades IMM</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>RegionalClientOnPremise__c</columns>
        <columns>FY__c</columns>
        <columns>WorkflowNumber__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>pt_BR</language>
    </listViews>
    <nameField>
        <displayFormat>ACTIMM-{000000}</displayFormat>
        <label>ID Atividade</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Atividades IMM</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>